# agentwin

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
skills/agentwin/: SKILL.md
src/agentwin/: __init__.py  __main__.py  cli.py
src/agentwin/commands/: auth.py  cp.py  execute.py  health.py  list_cmd.py  pull.py  remove.py  script.py  sysinfo.py
src/agentwin/core/: auth.py  client.py  crypto.py  health.py  storage.py
src/agentwin/utils/: clixml.py  output.py
tests/: test_smoke.py  test_uuid.py
